<resources>
    <string name="app_name">testFinalProject</string>
    <string name="save_event">Save Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NameOfTheCompetition">Название соревнований</string>
    <string name="distance">Дистанция</string>
    <string name="category">Разряд</string>
    <string name="result">Результат(мин:сек:мсек)</string>
    <string name="yourCategory">Время</string>
    <string name="findCategory">Узнать</string>
    <string name="categoryRun">Категория</string>
    <string name="round">Круг</string>
    <string name="calculate">Расчитать</string>
    <string name="timeToRound">Время на круг</string>
    <string name="save">Сохранить</string>
</resources>